# the-notes

./: .env.template  .gitignore  .gitmodules  LICENSE  README.md  doculens.ipynb  hello.py  icla.ipynb  multilang_eda.ipynb  notebook-template.ipynb  pyproject.toml  requirements.txt  toxicity.ipynb  train-toxicgenv2.ipynb
algo/: kalman-filter.ipynb  linear-assignment.rs
backlog/: icla.ipynb
common/: hf_login.py
common/utils/: video_utils.py
coursera/: C2_W1_Assignment.ipynb  C2_W2_SoftMax.ipynb  C2_W3_Assignment.ipynb  C2_W4_Lab_02_Tree_Ensemble.ipynb
cv/: test_deep_oc_sort.ipynb
cv/de-markup-project/: [AIO_Project_Tensorflow]_Unet_DeMakeUp_MultiTasking.ipynb  [AIO_Project_Tensorflow]_Unet_DeMakeUp_NoSkipConnection.ipynb  [AIO_Project_Tensorflow]_Unet_DeMakeUp_SkipConnection.ipynb
cv/models/: alexnet.ipynb  mobilenet-v2.ipynb  resnet.ipynb  vision-transformers.ipynb
cv/stereo-matching/: [Exercise]_Stereo_Matching.ipynb  [Vectorization]_Stereo_Matching.ipynb
cv/tracking/: SORT.ipynb
cv/tracking/boxmot/: efficientdet_boxmot.ipynb  yolox_boxmot.ipynb
cv/tracking/mot/: torchvision_boxmot.ipynb
cv/tracking/sot/: README.md  statistic-approach.ipynb
dataset/: notebook.ipynb
events/: README.md
events/gcd/: gemini_dinosaur_game.js
nlp/: doculens.ipynb  evaluate_embedding_models.ipynb  test_docling.ipynb  train-toxicgenv2.ipynb
nlp/classification/: vn_sentiment_classification.ipynb
nlp/llm/: langgraph_basicagent.ipynb  langgraph_multi_agent.ipynb
others/: Exp_Long_Term_Forecast.py  Test_SmolDocling_doc_tag.ipynb  Video_Chat_with_SmolVLM.ipynb  gcp_knowledgraph_api.ipynb  multi-agent-langgraph.ipynb  multilang_eda.ipynb  parse_namhoakinh.ipynb  test_ai_platform.ipynb  test_neo4j.ipynb  upskill_test.ipynb
others/coursera/: C2_W2_Multiclass_TF.ipynb
others/doc_layout_parsing/: Test_SmolDocling_doc_tag.ipynb  test_nanonet_vlm.ipynb
others/smol_models/: Video_Chat_with_SmolVLM.ipynb  ollama_smollm.ipynb
utils/: hf_login.py  logging_config.py
(+7 files in other folders)
