[project]
name = "the-notes"
version = "0.1.0"
description = "the-notes, where ideas are written down."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "evaluate>=0.4.4",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "polars>=1.31.0",
    "python-dotenv>=1.1.1",
    "transformers>=4.53.1",
]
