[project]
name = "the-notes"
version = "0.1.0"
description = "the-notes, where ideas are written down."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "colorlog>=6.9.0",
    "datasets>=3.6.0",
    "docling>=2.47.1",
    "evaluate>=0.4.4",
    "graphdatascience>=1.16",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain-groq>=0.3.8",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langfuse>=3.3.4",
    "langgraph>=0.6.7",
    "matplotlib>=3.10.3",
    "minio>=7.2.16",
    "neo4j>=5.28.2",
    "polars>=1.31.0",
    "python-dotenv>=1.1.1",
    "pyvi>=0.1.1",
    "ruff>=0.12.10",
    "sentence-transformers>=5.1.0",
    "tiktoken>=0.11.0",
    "transformers>=4.53.1",
    "langchain-openai>=0.3.33",
    "langchain-milvus>=0.2.1",
    "pymilvus>=2.6.1",
    "langchain-ollama>=0.3.8",
    "langchain-cohere>=0.4.6",
    "operators>=1.0.1",
]
